신규포스트 추가 이미지 테그 css 변경

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -248,8 +248,9 @@ pre code.hljs {
 	}
 	img {
 		display: block;
-		margin: auto;
-		width: 90%;
+		margin-left: 0;
+
+		/*width: 90%;*/
 	}
 	/*
 	*	Posts
