--- a/_includes/head.html
+++ b/_includes/head.html
@@ -81,4 +81,5 @@
 
     gtag('config', 'UA-42722662-1');
   </script>
+  <script data-ad-client="ca-pub-3234744071843247" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
