Remove Disqus comment feature, Add utteranc.es feature Update License Update README.md

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,6 +33,14 @@ layout: default
   {{ content }}
 </article>
 
+<script src="https://utteranc.es/client.js"
+        repo="thecodinglog/blog-comments"
+        issue-term="pathname"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+</script>
+
 {% if site.jekyll-archives %}
 {% if page.tags.size > 0 %}
 <section class="tags">
