--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -38,6 +38,33 @@ h6 {
 	font-size: modular-scale(-2);
 }
 
+// 포스트 본문 내 h1 강조 스타일
+.post-content {
+	h1 {
+		font-size: modular-scale(5);
+		font-weight: 700;
+		color: $dark-gray;
+		padding: 0.5em 0;
+		margin-top: 1em;
+		margin-bottom: 0.3em;
+		// border-bottom: 3px solid $action-color;
+		position: relative;
+		
+	}
+	
+	h2 {
+		font-size: modular-scale(3);
+		// margin-top: 1.2em;
+		// margin-bottom: 0.6em;
+	}
+	
+	h3 {
+		font-size: modular-scale(1);
+		margin-top: 1em;
+		margin-bottom: 0.5em;
+	}
+}
+
 p {
   margin: 0 0 $small-spacing;
 }
